# WorkerManager

./: CMakeLists.txt  main.cpp
header/: Boss.h  Employee.h  Manager.h  Worker.h  WorkerManager.h
src/: Boss.cpp  Employee.cpp  Manager.cpp  WorkerManager.cpp
test/: test.cpp
